feat: optimize CommentService and PostService by implementing batch-loading for authors and categories to reduce N+1 query issues